[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/newBackClass.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Script_ana/QuizRendaF.gd" type="Script" id=3]
[ext_resource path="res://assets/Buttonquiz.png" type="Texture" id=4]
[ext_resource path="res://Script/CanvasLayer_calculadora.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="QuizRendaF" type="Node2D"]
script = ExtResource( 3 )

[node name="NewBackClass" type="Sprite" parent="."]
position = Vector2( 645, 357 )
scale = Vector2( 0.66875, 0.668519 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 313.0
margin_top = 417.0
margin_right = 1175.0
margin_bottom = 661.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Qual alternativa a seguir é falsa?

a) Empresas privadas podem oferecer investimentos de renda fixa.
b) Na renda fixa, o investidor sempre sabe, desde o inicio, qual será o seu rendimento em reais.
c) O Tesouro Direto é um tipo de investimento emitido pelo governo."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonquiz" type="Sprite" parent="."]
position = Vector2( 518, 639 )
scale = Vector2( 0.293242, 0.363324 )
texture = ExtResource( 4 )

[node name="RichTextLabel_a" type="RichTextLabel" parent="."]
margin_left = 499.0
margin_top = 617.0
margin_right = 572.0
margin_bottom = 676.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "a)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
show_behind_parent = true
margin_left = 483.0
margin_top = 618.0
margin_right = 557.0
margin_bottom = 668.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonquiz2" type="Sprite" parent="."]
position = Vector2( 689, 639 )
scale = Vector2( 0.293242, 0.363324 )
texture = ExtResource( 4 )

[node name="RichTextLabel_b" type="RichTextLabel" parent="."]
margin_left = 675.0
margin_top = 617.0
margin_right = 740.0
margin_bottom = 678.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "b)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
show_behind_parent = true
margin_left = 647.0
margin_top = 617.0
margin_right = 733.0
margin_bottom = 664.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonquiz3" type="Sprite" parent="."]
position = Vector2( 850, 639 )
scale = Vector2( 0.293242, 0.363324 )
texture = ExtResource( 4 )

[node name="RichTextLabel_c" type="RichTextLabel" parent="."]
margin_left = 833.0
margin_top = 617.0
margin_right = 889.0
margin_bottom = 673.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "c)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
show_behind_parent = true
margin_left = 810.0
margin_top = 618.0
margin_right = 894.0
margin_bottom = 666.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
